# clown68000

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  clown68000.c  clown68000.h  error.c  error.h  m68k.c  m68k.h  unity.c
common/: instruction.h  opcode.c  opcode.h
disassembler/: CMakeLists.txt  disassembler.c  disassembler.h  main.c  opcode.c  opcode.h
interpreter/: clown68000.c  clown68000.h  microcode.c  unity.c
interpreter/microcode-generator/: .gitignore  CMakeLists.txt  emit-instructions.c  emit-instructions.h  emit.c  emit.h  instruction-properties.c  instruction-properties.h
m68k/: emit-instructions.c  emit-instructions.h  emit.c  emit.h  gen.c  generator.c  instruction-actions.h  instruction-properties.c  instruction-properties.h  instruction.h  opcode.c  opcode.h
source/common/: instruction.h  opcode.h
source/disassembler/: main.c  opcode.h
source/interpreter/: clown68000.c  clown68000.h  microcode.c
source/interpreter/microcode-generator/: emit-instructions.c  emit-instructions.h  emit.c  emit.h  instruction-properties.h
